logo star alliance

--- a/email.mjml
+++ b/email.mjml
@@ -11,12 +11,6 @@
       body {
         background-color: #FFFFFF;
       }
-
-      @media (prefers-color-scheme: dark) {
-        body {
-          background-color: #FFFFFF !important;
-        }
-      }
     </mj-style>
   </mj-head>
   <mj-body>
@@ -24,14 +18,14 @@
       <mj-column width="40%" vertical-align="middle">
         <mj-image src="https://raw.githubusercontent.com/JeeTeee/responsive-email/refs/heads/main/images/logo-tap.png" alt="" align="left" border="none" padding="0"></mj-image>
       </mj-column>
-      <mj-column width="10%" vertical-align="middle">
-        <mj-image src="/images/arrow.png" alt="" align="left" border="none" padding="0"></mj-image>
-      </mj-column>
-      <mj-column width="20%" vertical-align="middle">
-        <mj-text align="left" padding="10px 0px" font-size="20px" font-weight="700" color="#7F7F7F">Agents</mj-text>
+      <mj-column width="30%" vertical-align="middle">
+        <mj-text align="left" padding="10px 0px" font-size="20px" font-weight="700" color="#7F7F7F">
+        <img src="https://raw.githubusercontent.com/JeeTeee/responsive-email/refs/heads/main/images/arrow.png" alt="Arrow" style="vertical-align: middle; height: 40px;">
+        Agents
+        </mj-text>
       </mj-column>
       <mj-column width="30%">
-        <mj-image src="https://raw.githubusercontent.com/JeeTeee/responsive-email/refs/heads/main/images/star-alliance-logo.jpg" alt="" align="right" border="none" padding="6px 0px 20px 40px"></mj-image>
+        <mj-image src="/images/star-alliance.png" alt="" align="right" border="none" padding="6px 0px 20px 40px"></mj-image>
       </mj-column>
     </mj-section>
     <mj-section padding="30px 0px 10px 0px">
